--- a/client/css/profile.css
+++ b/client/css/profile.css
@@ -83,6 +83,7 @@ body{
     grid-template-columns: 3fr 5fr;
 }
 .profileImage {
+    
     margin-top: 5%;
     background-color: rgba(255, 255, 255, 0.495);
     border-radius: 10px;
@@ -98,8 +99,9 @@ body{
 }
 .imgContainer > img {
     object-fit: cover;
-    height: 100%;
-    width: 100%;
+    height: 400px;
+    max-width: 100%;
+    aspect-ratio: 4 / 5;
     background-size: cover;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.478);
   }
